--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/material": "^5.15.15",
         "@radix-ui/react-slot": "^1.0.2",
+        "@tanstack/react-table": "^8.15.3",
         "chart.js": "^4.4.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
@@ -20,6 +24,7 @@
         "framer-motion": "^11.0.24",
         "http-proxy-middleware": "^3.0.0",
         "lucide-react": "^0.364.0",
+        "mui": "^0.0.1",
         "node-fetch": "^3.3.2",
         "papaparse": "^5.4.1",
         "react": "^18.2.0",
