--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "clsx": "^2.1.0",
         "concurrently": "^8.2.2",
         "cors": "^2.8.5",
+        "dompurify": "^3.0.11",
         "express": "^4.19.2",
         "framer-motion": "^11.0.24",
         "http-proxy-middleware": "^3.0.0",
@@ -30,18 +31,24 @@
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
+        "react-markdown": "^9.0.1",
         "react-masonry-css": "^1.0.16",
         "react-query": "^3.39.3",
+        "react-table": "^7.8.0",
+        "sanitize-html": "^2.13.0",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
+        "@types/dompurify": "^3.0.5",
         "@types/express": "^4.17.21",
         "@types/node": "^20.12.4",
         "@types/papaparse": "^5.3.14",
-        "@types/react": "^18.2.66",
+        "@types/react": "^18.2.74",
         "@types/react-dom": "^18.2.22",
+        "@types/react-table": "^7.7.20",
+        "@types/sanitize-html": "^2.11.0",
         "@typescript-eslint/eslint-plugin": "^7.2.0",
         "@typescript-eslint/parser": "^7.2.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
@@ -52,7 +59,7 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "ts-node": "^10.9.2",
-        "typescript": "^5.2.2",
+        "typescript": "^5.4.4",
         "vite": "^5.2.0"
     }
 }
